<resources>
    <string name="app_name">Camp Manager</string>
    <string name="search_student_name">학생의 이름을 입력하세요</string>
    <string name="search_student_fail">해당 이름의 학생이 없습니다  생년월일도 확인하세요</string>
    <string name="search">검 색</string>
    <string name="login_teacher"><u>선생님 로그인</u></string>
    <string name="login_parents"><u>부모님 로그인</u></string>
    <string name="button_login">로그인</string>
    <string name="input_email">이메일을 입력하세요</string>
    <string name="input_password">비밀번호를 입력하세요</string>
    <string name="register_teacher">선생님 등록</string>
    <string name="input_name">이름을 입력하세요</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_list">선생/학생 리스트</string>
    <string name="menu_daily">날짜별 테스트</string>
    <string name="menu_profile">프로필</string>
    <string name="input_password_confirm">비밀번호를 확인하세요</string>
    <string name="register">등 록</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listfragment">ListFragment</string>
    <string name="dailyfragment">DailyFragment</string>
    <string name="profilefragment">ProfileFragment</string>
    <string name="add_student">학생 추가</string>
    <string name="input_student_birth">학생의 생년월일을 입력하세요\nex.20070101</string>
    <string name="add_profile_image">프로필 사진 추가</string>
    <string name="confirm">확 인</string>
    <string name="check_inputs">이름과 생년월일을 입력했는지 확인하세요</string>
    <string name="profile_upload_success">프로필 사진 업로드에 성공했습니다</string>
    <string name="profile_upload_failure">프로필 사진 업로드에 실패했습니다</string>
    <string name="data_receive_fail">Data receive failed</string>
    <string name="data_receive_success">Data receive success</string>
    <string name="change_profile_image">프로필 사진 변경</string>
    <string name="logout">로그아웃</string>
    <string name="teacher">선생님</string>
    <string name="birth">생년월일</string>
    <string name="email">이메일</string>
    <string name="view_test_result">테스트 결과 보기</string>
    <string name="choose_date">확인하고 싶은 날짜를 선택하세요</string>
    <string name="input_eng_result">학생의 영어 성적을 입력하세요</string>
    <string name="input_math_result">학생의 수학 성적을 입력하세요</string>
    <string name="input_remarks">학생의 오늘은 어땠나요?</string>
    <string name="add_daily_result">데일리 결과 추가</string>
    <string name="english">영어</string>
    <string name="math">수학</string>
    <string name="edit">편 집</string>
    <string name="learning_volume">학습량</string>
    <string name="result">결과</string>
    <string name="create_result_data_failed">초기 데이터 생성 실패</string>
    <string name="empty">입력해주세요</string>
    <string name="student">학생</string>
    <string name="exit">종료하기</string>
    <string name="exit_message">종료하시겠습니까?</string>
    <string name="ok">네</string>
    <string name="no">아니요</string>
    <string name="remarks">한줄평</string>
    <string name="hint_no_info">아직 정보가 없습니다</string>
    <string name="show_daily_result">데일리 성적 보기</string>
    <string name="student_teacher">담당선생님</string>
    <string name="teacher_student">담당 학생</string>

</resources>
