<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddResultActivity">

    <RelativeLayout
        android:id="@+id/ll_result_top"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:background="@drawable/ic_arrow_back_black_24dp" />
        <TextView
            android:id="@+id/tv_result_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_daily_result"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20dp"/>
    </RelativeLayout>


    <EditText
        android:id="@+id/et_student_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/btn_add_result"
        app:layout_constraintEnd_toEndOf="@id/btn_add_result"
        app:layout_constraintTop_toBottomOf="@+id/ll_result_top"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:hint="@string/search_student_name"
        android:inputType="text"/>
    <EditText
        android:id="@+id/et_student_birth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/btn_add_result"
        app:layout_constraintEnd_toEndOf="@id/btn_add_result"
        app:layout_constraintTop_toBottomOf="@+id/et_student_name"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        android:hint="@string/input_student_birth"
        android:inputType="text"/>
    <EditText
        android:id="@+id/et_eng_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/btn_add_result"
        app:layout_constraintEnd_toEndOf="@id/btn_add_result"
        app:layout_constraintTop_toBottomOf="@+id/et_student_birth"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        android:hint="@string/input_eng_result"
        android:inputType="text"/>
    <EditText
        android:id="@+id/et_math_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/btn_add_result"
        app:layout_constraintEnd_toEndOf="@id/btn_add_result"
        app:layout_constraintTop_toBottomOf="@+id/et_eng_result"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        android:hint="@string/input_math_result"
        android:inputType="text"/>

    <EditText
        android:id="@+id/et_remarks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/btn_add_result"
        app:layout_constraintEnd_toEndOf="@id/btn_add_result"
        app:layout_constraintTop_toBottomOf="@+id/et_math_result"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_result"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        android:gravity="start"
        android:hint="@string/input_remarks"
        android:minLines="3"
        android:inputType="textMultiLine"/>

    <Button
        android:id="@+id/btn_add_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        style="@style/ButtonSearch"
        android:text="@string/confirm"/>
</androidx.constraintlayout.widget.ConstraintLayout>