<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_record_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Title"
            android:padding="8dp"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_record_date">
            <TableRow android:layout_margin="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Menu"
                    android:text="@string/learning_volume"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tv_record_volume"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"/>
            </TableRow>
            <TableRow android:layout_margin="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Menu"
                    android:text="@string/english"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tv_record_eng"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"/>
            </TableRow>
            <TableRow android:layout_margin="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Menu"
                    android:text="@string/math"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tv_record_math"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"/>
            </TableRow>
            <TableRow android:layout_margin="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Menu"
                    android:text="@string/remarks"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tv_record_remarks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"/>
            </TableRow>
        </TableLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>