<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:id="@+id/ll_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="24dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_user_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="20dp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_user_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_user_name"
        android:layout_marginTop="16dp"
        android:src="@drawable/default_profile"/>

    <Button
        android:id="@+id/btn_change_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:text="@string/change_profile_image"
        app:layout_constraintEnd_toEndOf="@+id/iv_user_image"
        app:layout_constraintStart_toStartOf="@id/iv_user_image"
        app:layout_constraintTop_toBottomOf="@+id/iv_user_image" />

    <LinearLayout
        android:id="@+id/ll_user_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/iv_user_image"
        app:layout_constraintEnd_toEndOf="@id/iv_user_image"
        app:layout_constraintTop_toBottomOf="@+id/btn_change_profile"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="16dp"
                android:text="@string/email"/>
            <TextView
                android:id="@+id/tv_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@android:color/black"
                android:textSize="16dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_student_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="16dp"
                android:text="@string/birth"/>
            <TextView
                android:id="@+id/tv_student_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@android:color/black"
                android:textSize="16dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/iv_user_image"
        app:layout_constraintEnd_toEndOf="@id/iv_user_image"
        app:layout_constraintTop_toBottomOf="@+id/ll_user_detail"
        android:layout_marginTop="16dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_show_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonSearch"
            android:text="데일리 성적 보기"/>
        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/ButtonSearch"
            android:text="@string/logout"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>